# vscode_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/utils/: print.h  timer.h
scripts/: fix_rpath.sh  install_clang.sh  update_cmake.sh  update_gcc.sh
src/: timer.cpp
test/: test.cpp
